# serilite

./: .gitignore  CMakeLists.txt  READEME.md  README.md
example/: demo.cpp  main.cpp
include/: serilite.hpp
include/serilite/: for_each_internal.h
